--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ compiler:
 install:
   - sudo apt-get install -qq libeigen3-dev
   - sudo apt-get install -qq libmpich2-dev
+  - sudo apt-get install -qq libboost-all-dev
 # Change this to your needs
 script: ./configure.sh -r && make && ctest
