--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,7 @@ install:
   - sudo apt-get install -qq libeigen3-dev
   - sudo apt-get install -qq libmpich2-dev
   - sudo apt-get install -qq libboost-all-dev
+  - sudo apt-get install -qq libhdf5-mpich2-dev
+  - sudo apt-get install -qq doxygen
 # Change this to your needs
 script: ./configure.sh -r && make && ctest
