--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -4,5 +4,5 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 # Debug grid
-add_executable(grid_dbg grid_dbg.cpp)
-target_link_libraries(grid_dbg)
+#add_executable(grid_dbg grid_dbg.cpp)
+#target_link_libraries(grid_dbg)
