Improves tooling with linter, make style, make clean
Added a tools directory that includes the cleanup and style-checking scripts.
Added new targets make style (to check style) and make clean.
Fixed some missing includes and deleted some empty filex.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,14 @@ if(BUILD_DOCUMENTATION)
     ${PROJECT_BINARY_DIR}/Doxyfile)
 endif()
 
+# Clang-format - enables "make format"
+set(FORMAT_SCRIPT ${PROJECT_BINARY_DIR}/tools/style-check.sh)
+add_custom_target (style ${FORMAT_SCRIPT})
+
+# Clean-up - enables "make clean"
+set(CLEANUP_SCRIPT ${PROJECT_BINARY_DIR}/tools/cleanup.sh)
+add_custom_target (clean ${CLEANUP_SCRIPT})
+
 # Subdirectories:
 add_subdirectory (./src/misc/tests)
 add_subdirectory (./src/containers/sequential/tests)
