--- a/ext/gtest/CMakeLists.txt
+++ b/ext/gtest/CMakeLists.txt
@@ -2,11 +2,13 @@ cmake_minimum_required(VERSION 2.8.8)
 project(gtest_builder C CXX)
 include(ExternalProject)
 
+find_package(LIBCXX REQUIRED) 
+set(GTEST_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${LIBCXX_INCLUDE_DIR}")
+
 ExternalProject_Add(googletest
     SVN_REPOSITORY http://googletest.googlecode.com/svn/trunk
-    SVN_REVISION -r 660
-    TIMEOUT 10
-    CMAKE_ARGS -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS} 
+    TIMEOUT 5
+    CMAKE_ARGS -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_CXX_FLAGS=${GTEST_CXX_FLAGS}
     PREFIX "${CMAKE_CURRENT_BINARY_DIR}"
     INSTALL_COMMAND "" # Disable install step
 )
