--- a/src/solver/fv/CMakeLists.txt
+++ b/src/solver/fv/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-#add_hom3_test(heat_fv_solver)
-#add_hom3_test(euler_fv_solver)
-add_hom3_test(coupled_heat_euler)
-add_hom3_test(coupled_euler_euler)
+add_subdirectory (./heat)
+add_subdirectory (./euler)
+add_subdirectory (./cns)
+add_subdirectory (./tests)
