--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,8 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+add_subdirectory (./misc)
+add_subdirectory (./containers)
+add_subdirectory (./grid)
+add_subdirectory (./output)
+add_subdirectory (./solver)
+add_subdirectory (./geometry)
