--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory (./grid)
 add_subdirectory (./output)
 add_subdirectory (./solver)
 add_subdirectory (./geometry)
+add_subdirectory (./io)
