Initial HDF5 support
- Initial HDF5 support, fixes #28
  - file handlers are now in the src/io directory
  - add cmake/FindHDF5Lite.cmake to find the H5LT lib
  - link agains HDF5 and HDF5Lite
  - added hdf5 file handler, see io/hdf5_file.hpp
  - added tests for hdf5 file handler, see io/tests
  - removed src/output directory
    - old output/output.hpp is now io/vtk.hpp .
- Initial support for MPI tests:
  - added add_hom3_mpi_test function to root's CMakeLists.txt
  that defines a unit-test file with both name and #of MPI procs.
  - added mpi test to check mpiconfiguration.
- added filesystem support: check and removal of existing files.
- added a simple heap buffer, see  misc/heap_buffer.hpp
- replaced all std::string's with String

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,6 +120,12 @@ set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${HDF5_COMPILE_FLAGS})
 set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${HDF5_LINK_FLAGS})
 include_directories(HDF5_INCLUDE_PATH)
 
+# HDF5-Lite
+find_package(HDF5LITE REQUIRED)
+set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${HDF5LITE_COMPILE_FLAGS})
+set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${HDF5LITE_LINK_FLAGS})
+include_directories(HDF5LITE_INCLUDE_PATH)
+
 # boost
 set(Boost_USE_STATIC_LIBS OFF)
 set(Boost_USE_MULTITHREADED ON)
@@ -127,7 +133,7 @@ set(Boost_USE_STATIC_RUNTIME ON)
 find_package(Boost 1.53 COMPONENTS mpi serialization filesystem system REQUIRED)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
-set(HOM3_BASE_LIBS ${Boost_LIBRARIES} ${MPI_LIBRARIES} ${HDF5_LIBRARY})
+set(HOM3_BASE_LIBS ${Boost_LIBRARIES} ${MPI_LIBRARIES} ${HDF5_LIBRARY} ${HDF5LITE_LIBRARY})
 set(HOM3_TESTING_LIBS ${HOM3_BASE_LIBS} ${GTEST_LIBS})
 set(HOM3_TESTING_INCLUDES ${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 function(add_hom3_test name)
@@ -137,6 +143,15 @@ function(add_hom3_test name)
   target_link_libraries(${name} ${HOM3_TESTING_LIBS})
   add_test(${name} ${name})
 endfunction(add_hom3_test)
+
+function(add_hom3_mpi_test name no_mpi_proc)
+  include_directories(${HOM3_TESTING_INCLUDES})
+  add_executable(${name} ${name}_test.cpp)
+  add_dependencies(${name} googletest)
+  target_link_libraries(${name} ${HOM3_TESTING_LIBS})
+  set(test_parameters -np ${no_mpi_proc} "./${name}")
+  add_test(NAME ${name} COMMAND "mpirun" ${test_parameters})
+endfunction(add_hom3_mpi_test)
 
 # Doxygen (optional) - Enables "make docs"
 option(BUILD_DOCUMENTATION "Use Doxygen to create the HTML documentation" ON)
