ib for heat transfer working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory (./misc)
 add_subdirectory (./containers)
 add_subdirectory (./geometry)
 add_subdirectory (./grid)
+add_subdirectory (./interpolation)
 add_subdirectory (./io)
 add_subdirectory (./solver)
