--- a/src/solver/fv/heat/tests/CMakeLists.txt
+++ b/src/solver/fv/heat/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_hom3_test(heat_fv_solver)
+#add_hom3_test(heat_fv_solver)
+add_hom3_test(heat_fv_mb_solver)
