coupling with mb

--- a/src/solver/fv/tests/CMakeLists.txt
+++ b/src/solver/fv/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_hom3_test(coupled_cns_heat)
+#add_hom3_test(coupled_cns_heat)
+add_hom3_test(coupled_mb_cns_heat)
